implement fuel